Fix hadith formatting and layout issues

--- a/src/components/hadith/image-preview/hadithImage.module.scss
+++ b/src/components/hadith/image-preview/hadithImage.module.scss
@@ -1,12 +1,24 @@
 .hadithTranslation {
   .hadith-nas {
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: var(--color-hadith);
+  }
+  .arabic {
+    font-family: var(--font-arabic-nas);
+    color: var(--color-hadith);
+
+    &:lang(ur) {
+      font-size: 1em;
+    }
+    &:lang(en) {
+      font-size: 1.2em;
+      @apply font-normal leading-loose;
+    }
   }
 
   &:lang(en) {
-    @apply leading-4;
     font-family: var(--font-cairo);
+    @apply leading-none;
     .hadith-nas {
       @apply font-semibold;
     }
@@ -40,6 +52,7 @@
 
 .ramz {
   color: var(--color-hadith);
+  @apply leading-normal;
   &:lang(ar) {
     font-family: var(--font-arabic-ramz);
   }
